--- a/style/style.css
+++ b/style/style.css
@@ -57,8 +57,8 @@ h2 {
 .text-profile-wrapper {
   text-align: left;
   float: left;
-  margin-left: 10px;
-  margin-top: 5px;
+  padding: 5px 5px;
+  height: 100%;
 }
 
 .white-text {
